--- a/source/photo.html
+++ b/source/photo.html
@@ -10,13 +10,13 @@
 
 <body>
   <header class="page-header">
-    <nav class="main-nav">
+    <nav class="main-nav main-nav--opened">
       <div class="logo-wrapper">
         <a class="page-header__logo">
-          <img class="page-header__logo-image" src="http://placehold.it/100x50" width="" height="" alt="Pink">
+          <img class="page-header__logo-image" src="img/logo-pink-white-mobile.svg" width="" height="" alt="Pink">
         </a>
       </div>
-      <button class="main-nav__toggle" type="button">Открыть меню</button>
+      <button class="main-nav__toggle" type="button"></button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
@@ -39,30 +39,31 @@
         <h1 class="page-header__title">Фотографии пользователей</h1>
       </div>
     </div>
-
   </header>
   <main class="page-main">
     <section class="photo-gallery">
       <div class="photo-gallery__agitation agitation">
-        <p class="agitation__text">Взгяните на фотографии, которые выкладывают пользователи!<br>
+        <p class="agitation__text">Взгяните на фотографии, которые выкладывают<br> пользователи!
+          <!-- <br> -->
           Видите, как не хватает ваших?
         </p>
       </div>
       <div class=" user-photo user-photo--panorama">
         <div class="user-photo__item">
           <div class="user-photo__picture">
-
             <img class="page-main__logo-image--panorama" src="img/panorama-mobile@1x.jpg" width="" height=""
               alt="Панорама дня">
             <p class="user-photo__name">Панорама дня</p>
           </div>
           <div class="user-photo__comment user-photo__comment-panorama">
-            <p class="comment__user-name">Анна <span class="comment__time">(5 минут назад)</span></p>
-            <p class="comment__user-message">Прыгать или нет? напишите в коментарии свой совет и смотрите прямую
-              трансляцию в
-              перископе, задавайте свои вопросы!</p>
-            <span class="comment__user-likes"></span>
-            <span class="comment__user-likes-sum">Нравится: 215</span>
+            <div class="user-photo__comment-wrapper">
+              <p class="comment__user-name">Анна <span class="comment__time">(5 минут назад)</span></p>
+              <p class="comment__user-message">Прыгать или нет? напишите в коментарии свой совет и смотрите прямую
+                трансляцию в
+                перископе, задавайте свои вопросы!</p>
+              <span class="comment__user-likes"></span>
+              <span class="comment__user-likes-sum">Нравится: 215</span>
+            </div>
           </div>
         </div>
       </div>
@@ -74,10 +75,12 @@
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
-              <p class="comment__user-name">Левон <span class="comment__time">(5 часов назад)</span></p>
-              <p class="comment__user-message">Вчера он на луну летал, сегодня в руки к нам попал.</p>
-              <span class="user-likes"></span>
-              <span class="user-likes-sum">Нравится: 356</span>
+              <div class="user-photo__comment-wrapper">
+                <p class="comment__user-name">Левон <span class="comment__time">(5 часов назад)</span></p>
+                <p class="comment__user-message">Вчера он на луну летал, сегодня в руки к нам попал.</p>
+                <span class="comment__user-likes"></span>
+                <span class="comment__user-likes-sum">Нравится: 356</span>
+              </div>
             </div>
           </div>
         </div>
@@ -88,10 +91,12 @@
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
-              <p class="comment__user-name">Антон <span class="comment__time">(12 часов назад)</span></p>
-              <p class="comment__user-message">Соседи будут рады!</p>
-              <span class="user-likes"></span>
-              <span class="user-likes-sum">Нравится: 666</span>
+              <div class="user-photo__comment-wrapper">
+                <p class="comment__user-name">Антон <span class="comment__time">(12 часов назад)</span></p>
+                <p class="comment__user-message">Соседи будут рады!</p>
+                <span class="comment__user-likes"></span>
+                <span class="comment__user-likes-sum">Нравится: 666</span>
+              </div>
             </div>
           </div>
         </div>
@@ -102,10 +107,12 @@
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
-              <p class="comment__user-name">Борис <span class="comment__time">(20 часов назад)</span></p>
-              <p class="comment__user-message"> Здесь могла быть ваша цитата о высоком и вечном</p>
-              <span class="user-likes"></span>
-              <span class="user-likes-sum">Нравится: 215</span>
+              <div class="user-photo__comment-wrapper">
+                <p class="comment__user-name">Борис <span class="comment__time">(20 часов назад)</span></p>
+                <p class="comment__user-message"> Здесь могла быть ваша цитата о высоком и вечном</p>
+                <span class="comment__user-likes"></span>
+                <span class="comment__user-likes-sum">Нравится: 215</span>
+              </div>
             </div>
           </div>
         </div>
@@ -116,10 +123,12 @@
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
-              <p class="comment__user-name">Сергей <span class="comment__time">(25 часов назад)</span></p>
-              <p class="comment__user-message">Самая кубанская в мире!</p>
-              <span class="user-likes"></span>
-              <span class="user-likes-sum">Нравится: 4</span>
+              <div class="user-photo__comment-wrapper">
+                <p class="comment__user-name">Сергей <span class="comment__time">(25 часов назад)</span></p>
+                <p class="comment__user-message">Самая кубанская в мире!</p>
+                <span class="comment__user-likes"></span>
+                <span class="comment__user-likes-sum">Нравится: 4</span>
+              </div>
             </div>
           </div>
         </div>
@@ -130,10 +139,12 @@
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
-              <p class="comment__user-name">Максим <span class="comment__time">(40 часов назад)</span></p>
-              <p class="comment__user-message">Где снег-то?</p>
-              <span class="user-likes"></span>
-              <span class="user-likes-sum">Нравится: 150</span>
+              <div class="user-photo__comment-wrapper">
+                <p class="comment__user-name">Максим <span class="comment__time">(40 часов назад)</span></p>
+                <p class="comment__user-message">Где снег-то?</p>
+                <span class="comment__user-likes"></span>
+                <span class="comment__user-likes-sum">Нравится: 150</span>
+              </div>
             </div>
           </div>
         </div>
@@ -144,10 +155,12 @@
                 alt="Панорама дня">
             </div>
             <div class="user-photo__comment comment">
-              <p class="comment__user-name">Надежда <span class="comment__time">(45 часов назад)</span></p>
-              <p class="comment__user-message">Всем GM и взаимные лайки!</p>
-              <span class="user-likes"></span>
-              <span class="user-likes-sum">Нравится: 2560</span>
+              <div class="user-photo__comment-wrapper">
+                <p class="comment__user-name">Надежда <span class="comment__time">(45 часов назад)</span></p>
+                <p class="comment__user-message">Всем GM и взаимные лайки!</p>
+                <span class="comment__user-likes"></span>
+                <span class="comment__user-likes-sum">Нравится: 2560</span>
+              </div>
             </div>
           </div>
         </div>
@@ -158,17 +171,24 @@
   <footer class="page-footer">
     <div class="page-footer__wrapper">
       <div class="page-footer__logo">
-        <a class="page-footer__logo-image "></a>
+        <a class="page-footer__logo-image ">
+          <img src="../img/logo-pink-blue-mobile.svg">
+        </a>
       </div>
       <div class="page-footer__social-links social-links">
-        <a class="social-links__item social-links__item--tw" href="#">Тв</a>
-        <a class="social-links__item social-links__item--fb" href="#">Фэйс</a>
-        <a class="social-links__item social-links__item--video" href="#">Видео</a>
+        <a class="social-links__item social-links__item--tw" href="https://twitter.com/"></a>
+        <a class="social-links__item social-links__item--fb" href="https://www.facebook.com/"></a>
+        <a class="social-links__item social-links__item--video" href="https://www.youtube.com/"></a>
       </div>
       <div class="page-footer__develop">
-        <a class="page-footer__develop-link" href="#">Разработано</a>
+        <a class="page-footer__develop-link" href="https://htmlacademy.ru/">
+          <svg class="page-footer__develop-link-icon" width="27" height="34" xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 60 60">
+            <path fill="#d22856"
+              d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z" />
+          </svg>
+          Разработано</a>
       </div>
-    </div>
   </footer>
 </body>
 
